Fixed data corruption bug.

BUG: 132443 


svn path=/trunk/extragear/network/ktorrent/; revision=576290